changed name of class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="align-center-y">
+  <div class="align-center-xy">
   <div class="container">
   <header>
     <img src="images/image-qr-code.png">
